initial structure with colors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucid Lip</title>
-    <meta name="description" content="Lucid Lip indie rock band NYC new york city website page" />
+    <meta name="description" content="Lucid Lip indie rock band NYC new york city website" />
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <header id="top">
+        <nav>
+            <a class="brand" href="#top"><img class="logo" src="images/Logowtext.png" alt="lip logo with Lucid Lip"></a>
+            <ul class="nav-menu">
+                <li>
+                    <a href="#about">About</a>
+                </li>
+
+                <li>
+                    <a href="#listen">Listen</a>
+                </li>
+                <li>
+                    <a href="#watch">Watch</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+
+        </nav>
+    </header>
+    <main>
+        <section class="white-section" id="about">
+            <div class="container">
+                <h2>About</h2>
+                <p>
+                    Lucid Lip brings together elements of multiple decade-spanning genres into a sound they call Alternative Rock and Soul. Throw together smokey yet smooth vocals floating over crisp, tight grooves, sensationally powerful guitars along with some heavy synthesizers and a wall of melodic harmonies, and you have the melting pot of vibe and sound that is Lucid Lip.  
+                </p>
+            </div>
+        </section>
+        <section class="blue-section" id="members">
+            <div class="container">
+        </div>
+        </section>
+        <section class="white-section" id="listen">
+            <div class="container">
+                <h2>Listen</h2>
+            </div>
+        </section>
+        <section class="red-section" id="watch">
+            <div class="container">
+                <h2>Watch</h2>
+            </div>
+        </section>
+        <section class="white-section" id="contact">
+            <div class="container">
+                <h2>Contact</h2>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 
 </body>
 </html>
