update socials formatting and spacing

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
         </section>
         <section id="listen">
-            <div class="container">
+            <div class="listen">
                 <div class="lip-break">
                     <div class="lips"><img src="images/logo-no-bg.png" alt="logo icon"><img src="images/logo-no-bg.png" alt="logo icon"><img src="images/logo-no-bg.png" alt="logo icon"></div>
                  </div>
@@ -126,7 +126,7 @@
             <form action="" method="post">
                 <input class="email-box" type="email" name="subscriberEmail" id="subscriberEmail"/> <input class="ll-button" type="submit" name="submit" id="submit"/>
             </form>
-            <h4><a href="https://www.paypal.me/lucidlipmusic">Donate <i class="fa-brands fa-paypal"></i></a></h4>
+            <a href="https://www.paypal.me/lucidlipmusic" class="donate">Donate <i class="fa-brands fa-paypal donate"></i></a>
         </div>
     </footer>
 
