updated socials links

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 </li>
             </ul>
             <ul class="socials-menu">
-                <li><i class="fa-brands fa-spotify"></i></li>
-                <li><i class="fa-solid fa-music"></i></li>
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><i class="fa-brands fa-youtube"></i></li>
-                <li><i class="fa-brands fa-tiktok"></i></li>
+                <li href="https://open.spotify.com/artist/5anuVUdc8pWfGXDfVhup66?si=rYXz3tFORZClVjRHwkQNHA" alt="spotify"><i class="fa-brands fa-spotify"></i></li>
+                <li href="https://music.apple.com/us/artist/lucid-lip/1543391232" alt="apple music"><i class="fa-solid fa-music"></i></li>
+                <li href="https://instagram.com/lucidlipmusic"><i class="fa-brands fa-instagram"></i></li>
+                <li href="https://youtube.com/channel/UCvEncyis8rzuQKg15V9F3-A"><i class="fa-brands fa-youtube"></i></li>
+                <li href="https://lucidlip.bandcamp.com/" alt="bandcamp"><i class="fa-brands fa-bandcamp"></i></li>
             </ul>
 
         </nav>
