--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 </li>
             </ul>
             <ul class="socials-menu">
-                <li href="https://open.spotify.com/artist/5anuVUdc8pWfGXDfVhup66?si=rYXz3tFORZClVjRHwkQNHA" alt="spotify"><i class="fa-brands fa-spotify"></i></li>
-                <li href="https://music.apple.com/us/artist/lucid-lip/1543391232" alt="apple music"><i class="fa-solid fa-music"></i></li>
-                <li href="https://instagram.com/lucidlipmusic"><i class="fa-brands fa-instagram"></i></li>
-                <li href="https://youtube.com/channel/UCvEncyis8rzuQKg15V9F3-A"><i class="fa-brands fa-youtube"></i></li>
-                <li href="https://lucidlip.bandcamp.com/" alt="bandcamp"><i class="fa-brands fa-bandcamp"></i></li>
+                <li><a href="https://open.spotify.com/artist/5anuVUdc8pWfGXDfVhup66?si=rYXz3tFORZClVjRHwkQNHA" alt="spotify"><i class="fa-brands fa-spotify"></i></a></li>
+                <li><a href="https://music.apple.com/us/artist/lucid-lip/1543391232" alt="apple music"><i class="fa-solid fa-music"></i></a></li>
+                <li><a href="https://instagram.com/lucidlipmusic"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://youtube.com/channel/UCvEncyis8rzuQKg15V9F3-A"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://lucidlip.bandcamp.com/" alt="bandcamp"><i class="fa-brands fa-bandcamp"></i></a></li>
             </ul>
 
         </nav>
@@ -114,13 +114,13 @@
         <div class="container follow">
             <h1>FOLLOW</h1>
             <ul class="socials-menu">
-                <li href="https://open.spotify.com/artist/5anuVUdc8pWfGXDfVhup66?si=rYXz3tFORZClVjRHwkQNHA" alt="spotify"><i class="fa-brands fa-spotify"></i></li>
-                <li href="https://music.apple.com/us/artist/lucid-lip/1543391232" alt="apple music"><i class="fa-solid fa-music"></i></li>
-                <li href="https://instagram.com/lucidlipmusic"><i class="fa-brands fa-instagram"></i></li>
-                <li href="https://youtube.com/channel/UCvEncyis8rzuQKg15V9F3-A"><i class="fa-brands fa-youtube"></i></li>
-                <li href="https://lucidlip.bandcamp.com/" alt="bandcamp"><i class="fa-brands fa-bandcamp"></i></li>
-                <li href="https://facebook.com/lucidlip"><i class="fa-brands fa-facebook"></i></li>
-                <li href=""><i class="fa-brands fa-tiktok"></i></li>
+                <li><a href="https://open.spotify.com/artist/5anuVUdc8pWfGXDfVhup66?si=rYXz3tFORZClVjRHwkQNHA" alt="spotify"><i class="fa-brands fa-spotify"></i></a></li>
+                <li><a href="https://music.apple.com/us/artist/lucid-lip/1543391232" alt="apple music"><i class="fa-solid fa-music"></i></a></li>
+                <li><a href="https://instagram.com/lucidlipmusic"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://youtube.com/channel/UCvEncyis8rzuQKg15V9F3-A"><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href="https://lucidlip.bandcamp.com/" alt="bandcamp"><i class="fa-brands fa-bandcamp"></i></a></li>
+                <li><a href="https://facebook.com/lucidlip"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
             </ul>
             <h2>subscribe!</h2>
             <form action="" method="post">
